--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -8,6 +8,9 @@ on:
   schedule:
     - cron: '30 1 * * *' # https://crontab.guru/#30_1_*_*_* (everyday at 0130)
 
+permissions:
+  contents: read
+
 jobs:
   stale:
     runs-on: ubuntu-latest
@@ -17,7 +20,7 @@ jobs:
     steps:
       - uses: actions/stale@v9
         with:
-          repo-token: 
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
           stale-issue-message: >
             This issue is stale because it has been open for 30 days with no activity
             and will be closed in 14 days unless you add a comment.
