--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        ruby: ['3.0', '3.1', '3.2', '3.3']
+        ruby: ["3.0", "3.1", "3.2", "3.3"]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
@@ -21,6 +21,8 @@ jobs:
           ruby-version: ${{ matrix.ruby }}
           bundler-cache: true
       - name: Installing dependencies
-        run: bundle check --path=vendor/bundle || bundle install --path=vendor/bundle
+        run: |
+          bundle check --path=vendor/bundle || bundle install --path=vendor/bundle
+          bundle exec appraisal install --path=vendor/bundle
       - name: Run tests
-        run: bundle exec rake test
+        run: bundle exec appraisal rake test
