--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -7,10 +7,8 @@ name: 'Close stale issues and PRs'
 on:
   schedule:
     - cron: '30 1 * * *' # https://crontab.guru/#30_1_*_*_* (everyday at 0130)
-
 permissions:
   contents: read
-
 jobs:
   stale:
     runs-on: ubuntu-latest
@@ -18,19 +16,21 @@ jobs:
       issues: write
       pull-requests: write
     steps:
-      - uses: actions/stale@v9
+      - uses: actions/stale@28ca1036281a5e5922ead5184a1bbf96e5fc984e # v9
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           stale-issue-message: >
-            This issue is stale because it has been open for 30 days with no activity
-            and will be closed in 14 days unless you add a comment.
+            This issue is stale because it has been open for 30 days with no activity and will be closed in 14 days unless you add a comment.
+
           stale-pr-message: >
-            This PR is stale because it has been open for 30 days with no activity
-            and will be closed in 14 days unless you add a comment.
+            This PR is stale because it has been open for 30 days with no activity and will be closed in 14 days unless you add a comment.
+
           close-issue-message: >
             This issue was closed because it has been stalled for 14 days with no activity.
+
           close-pr-message: >
             This PR was closed because it has been stalled for 14 days with no activity.
+
           days-before-issue-stale: 30
           days-before-pr-stale: 30
           days-before-issue-close: 14
