--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        ruby: ["3.1", "3.2", "3.3"]
+        ruby: ["3.2", "3.3"]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
@@ -26,6 +26,33 @@ jobs:
           bundle exec appraisal install --path=vendor/bundle
       - name: Run tests
         run: bundle exec appraisal rake test
+
+  test-3_1:
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+        ruby: ["3.1"]
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
+      - name: Set up Ruby ${{ matrix.ruby }}
+        uses: ruby/setup-ruby@a2bbe5b1b236842c1cb7dd11e8e3b51e0a616acc # v1
+        with:
+          ruby-version: ${{ matrix.ruby }}
+          bundler-cache: true
+      - name: Installing dependencies
+        run: |
+          bundle check --path=vendor/bundle || bundle install --path=vendor/bundle
+          bundle exec appraisal ar-6.1 bundle install --path=vendor/bundle
+          bundle exec appraisal ar-7.0 bundle install --path=vendor/bundle
+          bundle exec appraisal ar-7.1 bundle install --path=vendor/bundle
+          bundle exec appraisal ar-7.2 bundle install --path=vendor/bundle
+      - name: Run tests
+        run: |
+          bundle exec appraisal ar-6.1 rake test
+          bundle exec appraisal ar-7.0 rake test
+          bundle exec appraisal ar-7.1 rake test
+          bundle exec appraisal ar-7.2 rake test
 
   test-3_0:
     strategy:
