--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        ruby: ["3.2", "3.3"]
+        ruby: ["3.2", "3.3", "4.0"]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v4
@@ -22,8 +22,9 @@ jobs:
           bundler-cache: true
       - name: Installing dependencies
         run: |
-          bundle check --path=vendor/bundle || bundle install --path=vendor/bundle
-          bundle exec appraisal install --path=vendor/bundle
+          bundle config set path vendor/bundle
+          bundle check || bundle install
+          bundle exec appraisal install
       - name: Run tests
         run: bundle exec appraisal rake test
 
